# kedro-mcp

./: .env.example  .pre-commit-config.yaml  README.md  RELEASE.md  pyproject.toml
src/kedro_mcp/: __init__.py  server.py
src/kedro_mcp/prompts/: kedro_general_instructions.md  notebook_to_kedro.md
src/kedro_mcp/schemas/: __init__.py  catalog_schemas.py
src/kedro_mcp/schemas/catalog/: __init__.py  base_schemas.py  pandas_schemas.py
src/kedro_mcp/utils/: __init__.py  catalog_utils.py  shared_utils.py
