[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Kedro Team"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "mcp[cli]>=1.6.0",
  "kedro>=1.0.0",
]
description = "MCP server to help AI assistants interact with Kedro"
dynamic = ["version"]
license-files = {paths = ["LICENSE.txt"]}
name = "kedro-mcp"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
"kedro-mcp" = "kedro_mcp:main"

[tool.coverage.paths]
kedro = ["src/kedro_mcp"]  # omit tests for clarity, although this can be useful to see what test lines DID NOT run

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]
fail_under = 63
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = ["kedro_mcp"]

[tool.pytest.ini_options]
addopts = [
  # Allow test files to have the same name in different directories.
  "--import-mode=importlib"
]
filterwarnings = [
  "error"
]
pythonpath = ["src"]